--- a/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Media";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron" style="width:90%; margin-left:5%" >
+<div class="jumbotron" style="width:90%; margin-left:5% " >
     <h1 style="text-align:center;">Media</h1>
 
     <p class="lead" style="width:auto; text-align:center">
@@ -11,31 +11,30 @@
         Click the links below to view our Sunday Service live stream, our church event photos, and a variety of videos!
     </p>
 </div>
-<div style="width:90%; margin-left:5%">
-    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
-        <h2 style="text-align:center;">Photos</h2>
-        <p style="text-align:center;">
-            <br />
-            Check out photos of our congregation at church, and at our various community events!
-        </p>
-        <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Images/Index">Photos &raquo;</a>
-        </p>
-    </div>
+<div style="width:90%; margin-left:5%"><div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <h2 style="text-align:center;">Photos</h2>
+    <p style="text-align:center;">
+        <br />
+        Check out photos of our congregation at church, and at our various community events!
+    </p>
+    <p style="text-align:center;">
+        <br /><a class="btn btn-default" href="~/Images/Index">Photos &raquo;</a>
+    </p>
+</div>
 
 
-    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:31%;margin:1.5%;">
+    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
         <h2 style="text-align:center;">Live Stream Video</h2>
         <p style="text-align:center;">
             <br />
-            Watch a live stream of our Sunday Services every Sunday at 8:30 and 10:30 Am! Also check out previous service recorded services!
+            Watch a live stream of our Sunday Services every Sunday at 8:30 and 10:30 Am, or check out previous service recorded services!
         </p>
         <p style="text-align:center;">
             <br /><a class="btn btn-default" href="~/Images/LiveStream">Live Stream &raquo;</a>
         </p>
     </div>
 
-    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
+    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
         <h2 style="text-align:center;">Calvary Videos</h2>
         <p style="text-align:center;">
             <br />
