--- a/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/MiddleSchool.cshtml
@@ -4,21 +4,20 @@
     ViewBag.Title = "MiddleSchool";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<<div class="jumbotron">
- 
-  
-     <a href="~/Ministries/Index" style="color:black;margin-left:2%;font-size:18px;">Ministries Home</a>
-     <a href="~/Ministries/Adults" style="color:black;margin-left:5%;font-size:18px;">Adults</a>
-     <a href="~/Ministries/Children" style="color:black;margin-left:5%;font-size:18px;">Children</a>
-     <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:5%;font-size:18px;">Middle School</a>
-     <a href="~/Ministries/HighSchool" style="color:black;margin-left:5%;font-size:18px;">High School</a>
-     <a href="~/Ministries/College" style="color:black;margin-left:5%;font-size:18px;">College</a>
-     <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:5%;font-size:18px;">Community Groups</a>
-     <a href="~/Ministries/Seniors" style="color:black;margin-left:5%;font-size:18px;">Sunday Church</a>
-     <br />
-     <br />
-     <h2>Ministry Leaders</h2>
+<div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
+    <a href="~/Ministries/Index" style="color:black;margin-left:2%;font-size:18px;">Ministries Home</a>
+    <a href="~/Ministries/Adults" style="color:black;margin-left:5%;font-size:18px;">Adults</a>
+    <a href="~/Ministries/Children" style="color:black;margin-left:5%;font-size:18px;">Children</a>
+    <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:5%;font-size:18px;">Middle School</a>
+    <a href="~/Ministries/HighSchool" style="color:black;margin-left:5%;font-size:18px;">High School</a>
+    <a href="~/Ministries/College" style="color:black;margin-left:5%;font-size:18px;">College</a>
+    <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:5%;font-size:18px;">Community Groups</a>
+    <a href="~/Ministries/Seniors" style="color:black;margin-left:5%;font-size:18px;">Sunday Church</a>
+    <br />
+    <br />
+</div>
+<div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto ">
     <table class="table" style="width:25%; padding-top:5%; float:left; background: #fff;color: #222;border-radius: 5px;box-sizing: border-box; border-color:#222">
         <tr>
             <th>
