--- a/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Event/Calendar.cshtml
@@ -16,11 +16,11 @@
 
 </head>
 
-<div class="jumbotron" style="width:90%; margin-left:5%; ">
+<div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
     <h2 style="margin-left:45%; margin-bottom:3%; width:10%">Calendar</h2>
 
-    <div id="boom">
+    <div id="boom" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
         <script type="text/javascript">
 
