--- a/CalvaryOpebBibleWebsite/Views/Images/YouthGroup.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/YouthGroup.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Youth Group Photos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron" style="width:90%; margin-left:5%">
+<div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
+
 
     <h2 style="margin-left:40%; width:20%;">Youth Group</h2>
 
@@ -23,8 +24,8 @@
             @foreach (var item in Model)
             {
 
-                <td style="float:left; margin:2.5%;height:250px; width:250px">
-                    <a href="@Url.Action("ViewImage","Images", new { id = item.ID})"><img style="max-height:250px; max-width:250px" src="@Url.Content(item.ImagePath)" class="thumbnail" /></a>
+                <td style="float:left; margin:2.5%;max-height:250px; max-width:250px">
+                    <a href="@Url.Action("ViewImage","Images", new { id = item.ID})"><img style="max-height:225px; max-width:225px" src="@Url.Content(item.ImagePath)" class="thumbnail" /></a>
 
                 </td>
 
