--- a/CalvaryOpebBibleWebsite/Views/Images/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Images/Index.cshtml
@@ -25,8 +25,8 @@
             @foreach (var item in Model.Where(s => s.Category == "Youth Group" || s.Category == "Community Groups" || s.Category == "Kids" || s.Category == "Sunday Church"))
             {
 
-                <td style="float:left; margin:2.5%;max-height:250px; max-width:250px">
-                    <a href="@Url.Action("ViewImage","Images", new { id = item.ID})"><img style="max-height:225px; max-width:225px" src="@Url.Content(item.ImagePath)" class="thumbnail" /></a>
+                <td style="float:left; margin:2.5%;height:250px; width:250px">
+                    <a href="@Url.Action("ViewImage","Images", new { id = item.ID})"><img style="max-height:250px; max-width:250px" src="@Url.Content(item.ImagePath)" class="thumbnail" /></a>
 
                 </td>
 
